Modification de l'entete

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Netsukomirosso.github.io</h1>
+        <h1>Netsuko Mirosso Page</h1>
         <p></p>
       </header>
 
